# Nebula

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
docs/diagrams/: Nebula.puml
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
resources/: base.frag  base.vert  phong.frag  phong.vert  screen.frag  screen.vert  simple.frag  simple.vert  wiggle.vert
resources/deferred/: colors.frag  gBuffer.frag  gBuffer.vert  object.frag  positions.frag  shading.frag  shading.vert
resources/models/blahaj/: blahaj.glb
resources/models/cube/: cube.glb  cube.mtl
resources/pbr/: colors.frag  colors.vert  normals.frag
resources/phong/: shading.frag  shading.vert
resources/scenes/LightingTest/: lightingTest.nbsv
resources/scenes/Test01/: Test01.nbsv
resources/scenes/Test01/Resources/: island.glb  island.gltf
resources/scenes/Test01/Resources/kenney_piratekit_1.1/: boat_large.glb  bottle.glb  bottle.gltf  formation_stone.glb  palm_long.glb  pirate_captain.glb  tower.glb
resources/testing/: colors.frag  lights.frag  normals.frag  normals.vert  object.vert  positions.vert  shading.frag  shading.vert
src/: CMakeLists.txt  Testing.cpp  Testing.hpp  Window.cpp  Window.hpp
src/Components/: MeshComponent.cpp  MeshComponent.hpp
src/api/: Callbacks.hpp  FpsCam.cpp  FpsCam.hpp  Nebula.cpp  Nebula.hpp  NebulaOptions.hpp
src/api/ecs/: Component.cpp  Component.hpp  GameObject.cpp  GameObject.hpp  Registry.cpp  Registry.hpp
src/api/input/: Input.cpp  Input.hpp
src/graphics/: EBO.cpp  EBO.hpp  Entity.cpp  Entity.hpp  FpsCam.cpp  FpsCam.hpp  Graphics.cpp  Graphics.hpp  RenderingPass.cpp  RenderingPass.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp  Vertex.hpp
src/graphics/buffersObjects/: EBO.cpp  FBO.cpp  FBO.hpp  GBuffer.cpp  GBuffer.hpp  RBO.cpp  RBO.hpp  VAO.hpp  VBO.cpp  VBO.hpp
src/graphics/material/: Material.cpp  Material.hpp  Texture.cpp  Texture.hpp  TextureType.hpp
src/graphics/mesh/: Mesh.cpp  Mesh.hpp  MeshLoading.cpp  MeshLoading.hpp
src/graphics/mesh/loaders/: AssimpMeshLoader.cpp  AssimpMeshLoader.hpp  GltbLoader.cpp  GltbLoader.hpp
src/graphics/rendering/: Renderer.hpp
src/graphics/rendering/deferred/: DeferredRenderer.cpp  DeferredRenderer.hpp
src/graphics/rendering/phong/: PhongRenderer.cpp  PhongRenderer.hpp
src/lib/: CMakeLists.txt
src/lib/glad/: CMakeLists.txt
src/lib/glad/include/glad/: glad.h
src/lib/glad/src/: glad.c
src/lib/glfw/: CMakeLists.txt
src/libIncludes/: glad.hpp
src/shaders/: BasicShader.cpp  BasicShader.hpp  PhongShader.cpp  PhongShader.hpp  Shader.cpp  Shader.hpp
src/shaders/light/: lighting.hpp
src/stb/: image.hpp
src/ui/: UILayer.cpp  UILayer.hpp  UISystem.cpp  UISystem.hpp
src/ui/UIElements/: TextElement.cpp  TextElement.hpp  TextureElement.cpp  TextureElement.hpp  UIElement.hpp
src/util/: Debug.cpp  Debug.hpp  RandomUtils.cpp  RandomUtils.hpp  Result.hpp  glUtil.cpp  glUtil.hpp  math.hpp
